# bitutil

./: CHANGELOG.md  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/terra/bitutil/: bit_rotation.h  bit_shift.h  byte_order.h  significant_bit.h
src/: CMakeLists.txt  byte_order.cpp
test/: CMakeLists.txt
test/test_bit_rotation/: CMakeLists.txt  test_bit_rotation.cpp
test/test_bit_shift/: CMakeLists.txt  test_bit_shift.cpp
test/test_byte_order/: CMakeLists.txt  test_byte_order.cpp
test/test_significant_bit/: CMakeLists.txt  test_significant_bit.cpp
